Add technical depth to the AI scoring
Prompts updated:
- filter.txt: Added technical_depth_score (0-10) measuring engineering complexity and defensibility. Added deprioritization rule for trivially simple ideas. Kept implementability_score as feasibility (higher = more feasible).
- insight.txt: Updated build_complexity to explicitly flag low-moat ideas. Added new field technical_moat_analysis requiring 2+ concrete technical barriers. Updated viability assessment to penalize easily-replicable ideas.
Pipeline wired end-to-end:
- db/schema.py: Added technical_depth_score REAL column + migration for existing DBs
- db/writer.py: Stores the new score from GPT responses
- config/config.yaml: Added technical_depth_weight: 0.2 and min_technical_depth: 4 hard cutoff. Rebalanced weights (sum still = 1.0 before
recent_activity_weight)
- scheduler/runner.py: Includes technical_depth_score in weighted formula + hard filter that rejects any post with technical_depth_score < 4 (the vibe-code
cutoff)
- gui/gui.py: Shows Tech Depth metric on cards, adds sidebar slider filter, adds sort option, shows technical moat in details, adds avg to summary stats

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -38,11 +38,13 @@ openai:
 
 # Scoring weights (used in filtering and final ranking)
 scoring:
-  relevance_weight: 0.3
-  emotion_weight: 0.15
-  pain_point_weight: 0.25
-  implementability_weight: 0.2      # New: prioritize buildable ideas
+  relevance_weight: 0.25
+  emotion_weight: 0.1
+  pain_point_weight: 0.2
+  implementability_weight: 0.15
+  technical_depth_weight: 0.2       # Penalize vibe-codeable ideas, reward real engineering
   recent_activity_weight: 0.1       # Prioritize active threads
+  min_technical_depth: 4            # Hard filter: reject posts below this technical depth score
   output_top_n: 10                  # Number of final posts to recommend
 
 # Database settings
